--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testImplementation 'org.projectlombok:lombok:1.18.26'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'com.codeborne:selenide:6.17.1'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
